--- a/WebContent/style.css
+++ b/WebContent/style.css
@@ -43,3 +43,11 @@ footer {
 		height: auto;
 	}
 }
+
+#d1{
+	text-decoration: underline;
+	background-color: rgba(250,250,250,0.8);
+	font-family: Lucida Caligraphy, Monotype Corsiva, cursive;
+	font-size: 50px;
+	
+}
